# min-e-calc

./: README.md  main.c  meson.build
